Wifi: Enhance EAP SIM/AKA/AKA` configuration for multi(dual ) sim
This commit enhances the user interface by having the provision to
perform EAP authentication on a specific SIM , when the DUT is enabled
with multi (dual) SIM.

Change-Id: I4095d235750c2a46ab33a99f5f4f3937b6d5e314
CRs-Fixed: 1030719

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7499,4 +7499,6 @@
 
     <!-- Message for telling the user the kind of BT device being displayed in list. -->
     <string name="bluetooth_talkback_bluetooth">Bluetooth</string>
+
+    <string name="select_sim_card">Select SIM card</string>
 </resources>
